--- a/checkout.html-1.htm
+++ b/checkout.html-1.htm
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/materialize.min-1.css">
     <link rel="stylesheet" href="css/normalize-1.css">
     <link rel="stylesheet" href="css/style-1.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- materialize icon -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Owl carousel -->
@@ -419,7 +419,7 @@
     </div>
     <!-- END CONTENT -->
     <!-- FOOTER  -->
-    <footer id="footer" class="bg-green-var1">
+    <footer id="footer" class="bg-green-var1 mb40">
         <div class="footer-info">
             <div class="container">
                 <div class="col s12 center">
@@ -469,6 +469,27 @@
             </div>
         </div>
     </footer>
+    <div id="fixedfooter " class="posfixed bottom0 w100 hpx80 z-index999">
+        <div class="bg-green-var1 text-white">
+            <div class="hpx80 dispflex justifycontentspacearound alignitemcenter ">
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-home"></i></div> <div class="fnt18 text-white mt10"> Home</div></a>
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-list"></i></div> <div class="fnt18 text-white mt10"> Product</div></a>
+
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter "><div class="fnt18 text-white"><i class="fa fa-heart"></i></div> <div class="fnt18 text-white mt10"> Wishlist</div></a>
+
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-user"></i></div> <div class="fnt18 text-white mt10"> Account</div></a>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- END FOOTER -->
     <!-- Script -->
     <script src="js/jquery.min-1.js"></script>
