--- a/product-page.html-1.htm
+++ b/product-page.html-1.htm
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="lib/font-awesome/web-fonts-with-css/css/fontawesome-all-1.css">
     <link rel="stylesheet" href="css/materialize.min-1.css">
     <link rel="stylesheet" href="css/normalize-1.css">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/style-1.css">
+
     <!-- materialize icon -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Owl carousel -->
@@ -280,59 +281,60 @@
                         Colgate Strong Teeth Toothpaste  (Buy 3 Get 1(200g Each) Free)  (600 g, Pack of 3)
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
-            </div>
-        </div>
-        <div class="qty-total-price">
-            <div class="container">
-                <div class="row">
-                    <div class="col s6">
-                        <div class="qty-qty text-green-var1">Select Grams</div>
-                    </div>
-                    <div class="col s6">
-                        <div class="qty-prc">
-                            <div class="quantity">
-                                <input type="number" min="1" max="9999" step="1" value="1">
-                            </div>
-                        </div>
-                    </div>
-                    
                 </div>
             </div>
-        </div>
-        <div class="qty-total-price">
-            <div class="container">
-                <div class="row">
-                    <div class="col s6">
-                        <div class="qty-qty text-green-var1">Qty</div>
-                    </div>
-                    <div class="col s6">
-                        <div class="qty-prc">
-                            <div class="quantity">
-                                <input type="number" min="1" max="9999" step="1" value="1">
+            <div class="qty-total-price">
+                <div class="container">
+                    <div class="row">
+                        <div class="col s6">
+                            <div class="qty-qty text-green-var1">Select Grams</div>
+                        </div>
+                        <div class="col s6">
+                            <div class="qty-prc">
+                                <div class="quantity">
+                                    <input type="number" min="1" max="9999" step="1" value="1">
+                                </div>
                             </div>
                         </div>
+
                     </div>
-                    
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col push-s3">
-                <div class="qty-buy">
-                    <button class="btn button-add-cart textcenter pall0">BUY</button>
+            <div class="qty-total-price">
+                <div class="container">
+                    <div class="row">
+                        <div class="col s6">
+                            <div class="qty-qty text-green-var1">Qty</div>
+                        </div>
+                        <div class="col s6">
+                            <div class="qty-prc">
+                                <div class="quantity">
+                                    <input type="number" min="1" max="9999" step="1" value="1">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col push-s3">
+                    <div class="qty-buy">
+                        <button class="btn button-add-cart textcenter pall0">BUY</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- END CONTENT -->
     <!-- FOOTER  -->
-    <footer id="footer" class="bg-green-var1">
+    <footer id="footer" class="bg-green-var1 mb40">
         <div class="footer-info">
             <div class="container">
                 <div class="col s12 center">
-                    <i class="fas fa-map-marker-alt"></i> Hyderabad-India<br>
-                    <i class="fas fa-phone-square"></i> +91 123456789<br>
-                    <i class="fas fa-envelope"></i> info@companyname.com
+                    <i class="fas fa-map-marker-alt"></i> Karangwaru St, Yogyakarta, Indonesia<br>
+                    <i class="fas fa-phone-square"></i> (+62)-000-123456 <br>
+                    <i class="fas fa-envelope"></i> halo@gromarttheme.com
                 </div>
             </div>
         </div>
@@ -376,6 +378,27 @@
             </div>
         </div>
     </footer>
+    <div id="fixedfooter " class="posfixed bottom0 w100 hpx80 z-index999">
+        <div class="bg-green-var1 text-white">
+            <div class="hpx80 dispflex justifycontentspacearound alignitemcenter ">
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-home"></i></div> <div class="fnt18 text-white mt10"> Home</div></a>
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-list"></i></div> <div class="fnt18 text-white mt10"> Product</div></a>
+
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter "><div class="fnt18 text-white"><i class="fa fa-heart"></i></div> <div class="fnt18 text-white mt10"> Wishlist</div></a>
+
+                </div>
+                <div>
+                    <a href="#" class="fnt18 text-white textcenter"><div class="fnt18 text-white"><i class="fa fa-user"></i></div> <div class="fnt18 text-white mt10"> Account</div></a>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- END FOOTER -->
     <!-- Script -->
     <script src="js/jquery.min-1.js"></script>
